# EC_Project

Project/car_ws/install/: local_setup.sh  setup.sh
Project/car_ws/install/key_car_control_cpp/lib/key_car_control_cpp/: key_car_control_node
Project/car_ws/install/key_car_control_cpp/share/key_car_control_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Project/car_ws/install/key_car_control_cpp/share/key_car_control_cpp/cmake/: key_car_control_cppConfig.cmake
Project/car_ws/src/key_car_control_cpp/: CMakeLists.txt  package.xml
Project/car_ws/src/key_car_control_cpp/launch/: key_car_control_launch.py
Project/car_ws/src/key_car_control_cpp/src/: key_car_control_node.cpp
Project/f411_project/: .cproject  CMakeLists.txt
Project/f411_project/applications/: SConscript  main.c
Project/f411_project/applications/aht10_lib/: aht10_read.c
Project/f411_project/applications/air_quality/: air_quality_mtor.c
Project/f411_project/applications/bh1750_lib/: bh1750_config.c
Project/f411_project/applications/bmp280_lib/: bmp280_read.c  bmp280_read.h
Project/f411_project/applications/data_upload/: data_upload.c  data_upload.h
Project/f411_project/applications/noise_analysis/: noise_mtor.c
Project/f411_project/applications/voice_command/: voice_ctrl.c  voice_ctrl.h  voice_uart.c  voice_uart.h
Project/f411_project/board/: board.c
Project/g474_proj/: .config  .cproject  CMakeLists.txt  rtconfig.h  rtconfig.py
Project/g474_proj/applications/: at_client_f4.c  encoder_read.c  main.c  robot_init.c  robot_init.h  robot_system.h
Project/g474_proj/applications/mpu9250_lib/: SConscript
Project/g474_proj/applications/pid_lib/: SConscript
Project/g474_proj/board/: Kconfig  board.c  board.h
Project/g474_proj/board/CubeMX_Config/: CubeMX_Config.ioc
Project/g474_proj/board/CubeMX_Config/Src/: stm32g4xx_hal_msp.c
RTT-Frame/6.UI design/Example/: main.c
RTT-Frame/artwifi/: .config  .config.old  .cproject  rtconfig.h
RTT-Frame/artwifi/applications/: main.c
STM32ART-Pi/: .config  .cproject  .project  rtconfig.h
STM32ART-Pi/applications/: Capweath_Thread.c  Capweath_Thread.h  Envmtor_Thread.c  Envmtor_Thread.h  Upcldd_Thread.c  Upcldd_Thread.h  main.c
